<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_startpage"
        tools:context=".features.startpage.StartpageFragment">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            card_view:cardCornerRadius="8dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:contentDescription="@string/thumbnail"
                android:scaleType="centerCrop"
                android:src="@drawable/frontpage_header" />
        </android.support.v7.widget.CardView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="30dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/frontpage_btn_text"
            android:textAllCaps="true"
            android:fontFamily="@font/raleway"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/button_bg_red"
            app:layout_constraintBottom_toBottomOf="@+id/thumbnail"
            app:layout_constraintEnd_toEndOf="@+id/thumbnail">
        </Button>

        <LinearLayout
            android:id="@+id/title_linear_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/divider_line"
            android:layout_marginTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thumbnail"
            app:layout_constraintVertical_bias="0.0" >

            <TextView
                android:id="@+id/startpage_recommended_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:text="@string/recommended"
                android:textColor="@color/dark_grey"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/startpage_recommended_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                android:text="@string/top_picks_for_you"
                android:textColor="@color/light_grey"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/top_pick_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutAnimation="@anim/layout_animation_slide_bottom"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/title_linear_layout" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>